--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.3/dist/full.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
   <!-- added daisyUI cdn link end -->
+  <!-- font awesome link started -->
+  <script src="https://kit.fontawesome.com/30fd5fe3d3.js" crossorigin="anonymous"></script>
+  <!-- font awesome link end -->
 </head>
 <body onload="allCards()">
   <header class="text-center p-4">
@@ -33,6 +36,7 @@
 
   <!-- extra js file added start -->
   <script src="js/app.js"></script>
+  <script src="js/extra1.js"></script>
   <!-- extra js file added end -->
 </body>
 </html>
