--- a/index.html
+++ b/index.html
@@ -44,12 +44,20 @@
         <button type="button" class="btn-close position-absolute top-0 start-100 translate-middle bg-danger p-2 rounded-circle light"  data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div id="cardModalBody" class="modal-body d-flex p-5 gap-2">
-        <div class="w-50 bg-warning-subtle p-3">
+        <div class="w-50 bg-warning-subtle p-3 border border-danger">
           <h5 id="Mdtl"></h5>
           <div id="price" class="d-flex gap-2 justify-content-between my-3 mx-2">
             <div style="height: 100px; width: 100px;" class="bg-light p-2"><h6 id="price1"></h6></div>
             <div style="height: 100px; width: 100px;" class="bg-light p-2"><h6 id="price2"></h6></div>
             <div style="height: 100px; width: 100px;" class="bg-light p-2"><h6 id="price3"></h6></div>
+          </div>
+          <div class="d-flex justify-content-between">
+            <div>
+              <h5 class="fw-bold">Features</h5>
+            </div>
+            <div>
+              <h5 class="fw-bold">Integrations</h5>
+            </div>
           </div>
         </div>
         <div class="w-50">
