--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
         <div class="w-50 bg-warning-subtle p-3 border border-danger">
           <h5 id="Mdtl"></h5>
           <div id="price" class="d-flex gap-2 justify-content-between my-3 mx-2">
-            <div style="height: 100px; width: 100px;" class="bg-light p-2"><h6 id="price1"></h6></div>
-            <div style="height: 100px; width: 100px;" class="bg-light p-2"><h6 id="price2"></h6></div>
-            <div style="height: 100px; width: 100px;" class="bg-light p-2"><h6 id="price3"></h6></div>
+            <div style="height: 100px; width: 100px;" class="bg-light p-2 d-flex align-items-center justify-content-center text-danger"><h6 id="price1"></h6></div>
+
+            <div style="height: 100px; width: 100px;" class="bg-light p-2 d-flex align-items-center justify-content-center text-warning"><h6 id="price2"></h6></div>
+
+            <div style="height: 100px; width: 100px;" class="bg-light p-2 d-flex align-items-center justify-content-center text-info"><h6 id="price3"></h6></div>
           </div>
           <div class="d-flex justify-content-between">
             <div>
@@ -62,6 +64,11 @@
             </div>
             <div>
               <h5 class="fw-bold">Integrations</h5>
+              <ol>
+                <li id="lis1"></li>
+                <li id="lis2"></li>
+                <li id="lis3"></li>
+              </ol>
             </div>
           </div>
         </div>
