--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         <button type="button" class="btn-close position-absolute top-0 start-100 translate-middle bg-danger p-2 rounded-circle light"  data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div id="cardModalBody" class="modal-body d-flex p-5 gap-2">
-        <div class="w-50 bg-warning-subtle p-3 border border-danger">
+        <div class="w-50 bg-warning-subtle p-3 border border-danger rounded">
           <h5 id="Mdtl"></h5>
           <div id="price" class="d-flex gap-2 justify-content-between my-3 mx-2">
-            <div style="height: 100px; width: 100px;" class="bg-light p-2 d-flex align-items-center justify-content-center text-danger"><h6 id="price1"></h6></div>
+            <div style="height: 100px; width: 100px;" class="bg-light p-2 d-flex align-items-center justify-content-center text-danger rounded"><h6 id="price1"></h6></div>
 
-            <div style="height: 100px; width: 100px;" class="bg-light p-2 d-flex align-items-center justify-content-center text-warning"><h6 id="price2"></h6></div>
+            <div style="height: 100px; width: 100px;" class="bg-light p-2 d-flex align-items-center justify-content-center text-warning rounded"><h6 id="price2"></h6></div>
 
-            <div style="height: 100px; width: 100px;" class="bg-light p-2 d-flex align-items-center justify-content-center text-info"><h6 id="price3"></h6></div>
+            <div style="height: 100px; width: 100px;" class="bg-light p-2 d-flex align-items-center justify-content-center text-info rounded"><h6 id="price3"></h6></div>
           </div>
           <div class="d-flex justify-content-between">
             <div>
@@ -72,8 +72,14 @@
             </div>
           </div>
         </div>
-        <div class="w-50">
-          <img class="img-fluid" id="divImage" src="" alt="">
+        <div class="w-50 bg-light rounded">
+          <div class="p-3">
+            <img class="img-fluid rounded" id="divImage" src="" alt="">
+          </div>
+          <div>
+            <h5 id="imgH5" class="text-center"></h5>
+            <p id="imgP"></p>
+          </div>
         </div>
       </div>
       
