modal image answer added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
           <div>
             <h5 id="imgH5" class="text-center"></h5>
-            <p id="imgP"></p>
+            <p id="imgP" class="text-center"></p>
           </div>
         </div>
       </div>
