--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
           </div>
         </div>
         <div class="w-50 bg-light rounded">
-          <div class="p-3">
+          <div class="p-3 position-relative">
+            <p class="p-2 bg-danger rounded text-white text-center position-absolute top-0 end-0" style="width: 150px;"> <span id="accu">0</span> accuracy</p>
             <img class="img-fluid rounded" id="divImage" src="" alt="">
           </div>
           <div>
