--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 </div>
       </section>
       <!-- modal section ends -->
-
+          <div class="text-center">
+            <button class="btn btn-primary">Show All</button>
+          </div>
     </main>
     <footer>
 
